# corona_sucks

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  Rocket.toml  data.json
cron_warga_bantu_warga/: .env.example  Cargo.toml
cron_warga_bantu_warga/src/: error.rs  google_sheet.rs  main.rs
public/: data.json  index.html  main.js  manifest.json  style.css  sw.js
src/: lib.rs  main.rs
