[package]
name = "cron_warga_bantu_warga"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.8.0", features = ["full"] }
dotenv = "0.15.0"
ring = "0.16.20"
data-encoding = "2.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.15"
